default is markdown for hover strings

see:

https://microsoft.github.io/language-server-protocol/specifications/lsp/3.17/specification/#markedString

BUG: 494139